// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty 1`] = `""`;

exports[`exported 1`] = `
"export namespace gqx {
  export namespace Query {
    export type argsObjectArr2D = _gqx<typeof Query$argsObjectArr2D>;
    export type argsObjectArrMM = _gqx<typeof Query$argsObjectArrMM>;
    export type argsObjectArrMN = _gqx<typeof Query$argsObjectArrMN>;
    export type argsObjectArrNM = _gqx<typeof Query$argsObjectArrNM>;
    export type argsObjectArrNN = _gqx<typeof Query$argsObjectArrNN>;
    export type argsObjectMand = _gqx<typeof Query$argsObjectMand>;
    export type argsObjectNull = _gqx<typeof Query$argsObjectNull>;
    export type argsScalarArr2D = _gqx<typeof Query$argsScalarArr2D>;
    export type argsScalarArrMM = _gqx<typeof Query$argsScalarArrMM>;
    export type argsScalarArrMN = _gqx<typeof Query$argsScalarArrMN>;
    export type argsScalarArrNM = _gqx<typeof Query$argsScalarArrNM>;
    export type argsScalarArrNN = _gqx<typeof Query$argsScalarArrNN>;
    export type argsScalarMand = _gqx<typeof Query$argsScalarMand>;
    export type argsScalarNull = _gqx<typeof Query$argsScalarNull>;
    export type noArgsObjectArr2D = _gqx<typeof Query$noArgsObjectArr2D>;
    export type noArgsObjectArrMM = _gqx<typeof Query$noArgsObjectArrMM>;
    export type noArgsObjectArrMN = _gqx<typeof Query$noArgsObjectArrMN>;
    export type noArgsObjectArrNM = _gqx<typeof Query$noArgsObjectArrNM>;
    export type noArgsObjectArrNN = _gqx<typeof Query$noArgsObjectArrNN>;
    export type noArgsObjectMand = _gqx<typeof Query$noArgsObjectMand>;
    export type noArgsObjectNull = _gqx<typeof Query$noArgsObjectNull>;
    export type noArgsScalarArr2D = _gqx<typeof Query$noArgsScalarArr2D>;
    export type noArgsScalarArrMM = _gqx<typeof Query$noArgsScalarArrMM>;
    export type noArgsScalarArrMN = _gqx<typeof Query$noArgsScalarArrMN>;
    export type noArgsScalarArrNM = _gqx<typeof Query$noArgsScalarArrNM>;
    export type noArgsScalarArrNN = _gqx<typeof Query$noArgsScalarArrNN>;
    export type noArgsScalarMand = _gqx<typeof Query$noArgsScalarMand>;
    export type noArgsScalarNull = _gqx<typeof Query$noArgsScalarNull>;
  }
  export namespace Mutation {
    export type argsObjectArr2D = _gqx<typeof Mutation$argsObjectArr2D>;
    export type argsObjectArrMM = _gqx<typeof Mutation$argsObjectArrMM>;
    export type argsObjectArrMN = _gqx<typeof Mutation$argsObjectArrMN>;
    export type argsObjectArrNM = _gqx<typeof Mutation$argsObjectArrNM>;
    export type argsObjectArrNN = _gqx<typeof Mutation$argsObjectArrNN>;
    export type argsObjectMand = _gqx<typeof Mutation$argsObjectMand>;
    export type argsObjectNull = _gqx<typeof Mutation$argsObjectNull>;
    export type argsScalarArr2D = _gqx<typeof Mutation$argsScalarArr2D>;
    export type argsScalarArrMM = _gqx<typeof Mutation$argsScalarArrMM>;
    export type argsScalarArrMN = _gqx<typeof Mutation$argsScalarArrMN>;
    export type argsScalarArrNM = _gqx<typeof Mutation$argsScalarArrNM>;
    export type argsScalarArrNN = _gqx<typeof Mutation$argsScalarArrNN>;
    export type argsScalarMand = _gqx<typeof Mutation$argsScalarMand>;
    export type argsScalarNull = _gqx<typeof Mutation$argsScalarNull>;
    export type noArgsObjectArr2D = _gqx<typeof Mutation$noArgsObjectArr2D>;
    export type noArgsObjectArrMM = _gqx<typeof Mutation$noArgsObjectArrMM>;
    export type noArgsObjectArrMN = _gqx<typeof Mutation$noArgsObjectArrMN>;
    export type noArgsObjectArrNM = _gqx<typeof Mutation$noArgsObjectArrNM>;
    export type noArgsObjectArrNN = _gqx<typeof Mutation$noArgsObjectArrNN>;
    export type noArgsObjectMand = _gqx<typeof Mutation$noArgsObjectMand>;
    export type noArgsObjectNull = _gqx<typeof Mutation$noArgsObjectNull>;
    export type noArgsScalarArr2D = _gqx<typeof Mutation$noArgsScalarArr2D>;
    export type noArgsScalarArrMM = _gqx<typeof Mutation$noArgsScalarArrMM>;
    export type noArgsScalarArrMN = _gqx<typeof Mutation$noArgsScalarArrMN>;
    export type noArgsScalarArrNM = _gqx<typeof Mutation$noArgsScalarArrNM>;
    export type noArgsScalarArrNN = _gqx<typeof Mutation$noArgsScalarArrNN>;
    export type noArgsScalarMand = _gqx<typeof Mutation$noArgsScalarMand>;
    export type noArgsScalarNull = _gqx<typeof Mutation$noArgsScalarNull>;
  }

  export type $<T> =
    T extends typeof Query$argsObjectArr2D ? Query.argsObjectArr2D : $$1<T>;
  type $$1<T> =
    T extends typeof Query$argsObjectArrMM ? Query.argsObjectArrMM : $$2<T>;
  type $$2<T> =
    T extends typeof Query$argsObjectArrMN ? Query.argsObjectArrMN : $$3<T>;
  type $$3<T> =
    T extends typeof Query$argsObjectArrNM ? Query.argsObjectArrNM : $$4<T>;
  type $$4<T> =
    T extends typeof Query$argsObjectArrNN ? Query.argsObjectArrNN : $$5<T>;
  type $$5<T> =
    T extends typeof Query$argsObjectMand ? Query.argsObjectMand : $$6<T>;
  type $$6<T> =
    T extends typeof Query$argsObjectNull ? Query.argsObjectNull : $$7<T>;
  type $$7<T> =
    T extends typeof Query$argsScalarArr2D ? Query.argsScalarArr2D : $$8<T>;
  type $$8<T> =
    T extends typeof Query$argsScalarArrMM ? Query.argsScalarArrMM : $$9<T>;
  type $$9<T> =
    T extends typeof Query$argsScalarArrMN ? Query.argsScalarArrMN : $$10<T>;
  type $$10<T> =
    T extends typeof Query$argsScalarArrNM ? Query.argsScalarArrNM : $$11<T>;
  type $$11<T> =
    T extends typeof Query$argsScalarArrNN ? Query.argsScalarArrNN : $$12<T>;
  type $$12<T> =
    T extends typeof Query$argsScalarMand ? Query.argsScalarMand : $$13<T>;
  type $$13<T> =
    T extends typeof Query$argsScalarNull ? Query.argsScalarNull : $$14<T>;
  type $$14<T> =
    T extends typeof Query$noArgsObjectArr2D ? Query.noArgsObjectArr2D : $$15<T>;
  type $$15<T> =
    T extends typeof Query$noArgsObjectArrMM ? Query.noArgsObjectArrMM : $$16<T>;
  type $$16<T> =
    T extends typeof Query$noArgsObjectArrMN ? Query.noArgsObjectArrMN : $$17<T>;
  type $$17<T> =
    T extends typeof Query$noArgsObjectArrNM ? Query.noArgsObjectArrNM : $$18<T>;
  type $$18<T> =
    T extends typeof Query$noArgsObjectArrNN ? Query.noArgsObjectArrNN : $$19<T>;
  type $$19<T> =
    T extends typeof Query$noArgsObjectMand ? Query.noArgsObjectMand : $$20<T>;
  type $$20<T> =
    T extends typeof Query$noArgsObjectNull ? Query.noArgsObjectNull : $$21<T>;
  type $$21<T> =
    T extends typeof Query$noArgsScalarArr2D ? Query.noArgsScalarArr2D : $$22<T>;
  type $$22<T> =
    T extends typeof Query$noArgsScalarArrMM ? Query.noArgsScalarArrMM : $$23<T>;
  type $$23<T> =
    T extends typeof Query$noArgsScalarArrMN ? Query.noArgsScalarArrMN : $$24<T>;
  type $$24<T> =
    T extends typeof Query$noArgsScalarArrNM ? Query.noArgsScalarArrNM : $$25<T>;
  type $$25<T> =
    T extends typeof Query$noArgsScalarArrNN ? Query.noArgsScalarArrNN : $$26<T>;
  type $$26<T> =
    T extends typeof Query$noArgsScalarMand ? Query.noArgsScalarMand : $$27<T>;
  type $$27<T> =
    T extends typeof Query$noArgsScalarNull ? Query.noArgsScalarNull : $$28<T>;
  type $$28<T> =
    T extends typeof Mutation$argsObjectArr2D ? Mutation.argsObjectArr2D : $$29<T>;
  type $$29<T> =
    T extends typeof Mutation$argsObjectArrMM ? Mutation.argsObjectArrMM : $$30<T>;
  type $$30<T> =
    T extends typeof Mutation$argsObjectArrMN ? Mutation.argsObjectArrMN : $$31<T>;
  type $$31<T> =
    T extends typeof Mutation$argsObjectArrNM ? Mutation.argsObjectArrNM : $$32<T>;
  type $$32<T> =
    T extends typeof Mutation$argsObjectArrNN ? Mutation.argsObjectArrNN : $$33<T>;
  type $$33<T> =
    T extends typeof Mutation$argsObjectMand ? Mutation.argsObjectMand : $$34<T>;
  type $$34<T> =
    T extends typeof Mutation$argsObjectNull ? Mutation.argsObjectNull : $$35<T>;
  type $$35<T> =
    T extends typeof Mutation$argsScalarArr2D ? Mutation.argsScalarArr2D : $$36<T>;
  type $$36<T> =
    T extends typeof Mutation$argsScalarArrMM ? Mutation.argsScalarArrMM : $$37<T>;
  type $$37<T> =
    T extends typeof Mutation$argsScalarArrMN ? Mutation.argsScalarArrMN : $$38<T>;
  type $$38<T> =
    T extends typeof Mutation$argsScalarArrNM ? Mutation.argsScalarArrNM : $$39<T>;
  type $$39<T> =
    T extends typeof Mutation$argsScalarArrNN ? Mutation.argsScalarArrNN : $$40<T>;
  type $$40<T> =
    T extends typeof Mutation$argsScalarMand ? Mutation.argsScalarMand : $$41<T>;
  type $$41<T> =
    T extends typeof Mutation$argsScalarNull ? Mutation.argsScalarNull : $$42<T>;
  type $$42<T> =
    T extends typeof Mutation$noArgsObjectArr2D ? Mutation.noArgsObjectArr2D : $$43<T>;
  type $$43<T> =
    T extends typeof Mutation$noArgsObjectArrMM ? Mutation.noArgsObjectArrMM : $$44<T>;
  type $$44<T> =
    T extends typeof Mutation$noArgsObjectArrMN ? Mutation.noArgsObjectArrMN : $$45<T>;
  type $$45<T> =
    T extends typeof Mutation$noArgsObjectArrNM ? Mutation.noArgsObjectArrNM : $$46<T>;
  type $$46<T> =
    T extends typeof Mutation$noArgsObjectArrNN ? Mutation.noArgsObjectArrNN : $$47<T>;
  type $$47<T> =
    T extends typeof Mutation$noArgsObjectMand ? Mutation.noArgsObjectMand : $$48<T>;
  type $$48<T> =
    T extends typeof Mutation$noArgsObjectNull ? Mutation.noArgsObjectNull : $$49<T>;
  type $$49<T> =
    T extends typeof Mutation$noArgsScalarArr2D ? Mutation.noArgsScalarArr2D : $$50<T>;
  type $$50<T> =
    T extends typeof Mutation$noArgsScalarArrMM ? Mutation.noArgsScalarArrMM : $$51<T>;
  type $$51<T> =
    T extends typeof Mutation$noArgsScalarArrMN ? Mutation.noArgsScalarArrMN : $$52<T>;
  type $$52<T> =
    T extends typeof Mutation$noArgsScalarArrNM ? Mutation.noArgsScalarArrNM : $$53<T>;
  type $$53<T> =
    T extends typeof Mutation$noArgsScalarArrNN ? Mutation.noArgsScalarArrNN : $$54<T>;
  type $$54<T> =
    T extends typeof Mutation$noArgsScalarMand ? Mutation.noArgsScalarMand : $$55<T>;
  type $$55<T> =
    T extends typeof Mutation$noArgsScalarNull ? Mutation.noArgsScalarNull : never;
}"
`;

exports[`two 1`] = `
"export namespace gqx1 {
  export namespace Query {
    export type argsObjectArr2D = _gqx1<typeof Query$argsObjectArr2D>;
    export type argsObjectArrMM = _gqx1<typeof Query$argsObjectArrMM>;
    export type argsObjectArrMN = _gqx1<typeof Query$argsObjectArrMN>;
    export type argsObjectArrNM = _gqx1<typeof Query$argsObjectArrNM>;
    export type argsObjectArrNN = _gqx1<typeof Query$argsObjectArrNN>;
    export type argsObjectMand = _gqx1<typeof Query$argsObjectMand>;
    export type argsObjectNull = _gqx1<typeof Query$argsObjectNull>;
    export type argsScalarArr2D = _gqx1<typeof Query$argsScalarArr2D>;
    export type argsScalarArrMM = _gqx1<typeof Query$argsScalarArrMM>;
    export type argsScalarArrMN = _gqx1<typeof Query$argsScalarArrMN>;
    export type argsScalarArrNM = _gqx1<typeof Query$argsScalarArrNM>;
    export type argsScalarArrNN = _gqx1<typeof Query$argsScalarArrNN>;
    export type argsScalarMand = _gqx1<typeof Query$argsScalarMand>;
    export type argsScalarNull = _gqx1<typeof Query$argsScalarNull>;
    export type noArgsObjectArr2D = _gqx1<typeof Query$noArgsObjectArr2D>;
    export type noArgsObjectArrMM = _gqx1<typeof Query$noArgsObjectArrMM>;
    export type noArgsObjectArrMN = _gqx1<typeof Query$noArgsObjectArrMN>;
    export type noArgsObjectArrNM = _gqx1<typeof Query$noArgsObjectArrNM>;
    export type noArgsObjectArrNN = _gqx1<typeof Query$noArgsObjectArrNN>;
    export type noArgsObjectMand = _gqx1<typeof Query$noArgsObjectMand>;
    export type noArgsObjectNull = _gqx1<typeof Query$noArgsObjectNull>;
    export type noArgsScalarArr2D = _gqx1<typeof Query$noArgsScalarArr2D>;
    export type noArgsScalarArrMM = _gqx1<typeof Query$noArgsScalarArrMM>;
    export type noArgsScalarArrMN = _gqx1<typeof Query$noArgsScalarArrMN>;
    export type noArgsScalarArrNM = _gqx1<typeof Query$noArgsScalarArrNM>;
    export type noArgsScalarArrNN = _gqx1<typeof Query$noArgsScalarArrNN>;
    export type noArgsScalarMand = _gqx1<typeof Query$noArgsScalarMand>;
    export type noArgsScalarNull = _gqx1<typeof Query$noArgsScalarNull>;
  }
  export namespace Mutation {
    export type argsObjectArr2D = _gqx1<typeof Mutation$argsObjectArr2D>;
    export type argsObjectArrMM = _gqx1<typeof Mutation$argsObjectArrMM>;
    export type argsObjectArrMN = _gqx1<typeof Mutation$argsObjectArrMN>;
    export type argsObjectArrNM = _gqx1<typeof Mutation$argsObjectArrNM>;
    export type argsObjectArrNN = _gqx1<typeof Mutation$argsObjectArrNN>;
    export type argsObjectMand = _gqx1<typeof Mutation$argsObjectMand>;
    export type argsObjectNull = _gqx1<typeof Mutation$argsObjectNull>;
    export type argsScalarArr2D = _gqx1<typeof Mutation$argsScalarArr2D>;
    export type argsScalarArrMM = _gqx1<typeof Mutation$argsScalarArrMM>;
    export type argsScalarArrMN = _gqx1<typeof Mutation$argsScalarArrMN>;
    export type argsScalarArrNM = _gqx1<typeof Mutation$argsScalarArrNM>;
    export type argsScalarArrNN = _gqx1<typeof Mutation$argsScalarArrNN>;
    export type argsScalarMand = _gqx1<typeof Mutation$argsScalarMand>;
    export type argsScalarNull = _gqx1<typeof Mutation$argsScalarNull>;
    export type noArgsObjectArr2D = _gqx1<typeof Mutation$noArgsObjectArr2D>;
    export type noArgsObjectArrMM = _gqx1<typeof Mutation$noArgsObjectArrMM>;
    export type noArgsObjectArrMN = _gqx1<typeof Mutation$noArgsObjectArrMN>;
    export type noArgsObjectArrNM = _gqx1<typeof Mutation$noArgsObjectArrNM>;
    export type noArgsObjectArrNN = _gqx1<typeof Mutation$noArgsObjectArrNN>;
    export type noArgsObjectMand = _gqx1<typeof Mutation$noArgsObjectMand>;
    export type noArgsObjectNull = _gqx1<typeof Mutation$noArgsObjectNull>;
    export type noArgsScalarArr2D = _gqx1<typeof Mutation$noArgsScalarArr2D>;
    export type noArgsScalarArrMM = _gqx1<typeof Mutation$noArgsScalarArrMM>;
    export type noArgsScalarArrMN = _gqx1<typeof Mutation$noArgsScalarArrMN>;
    export type noArgsScalarArrNM = _gqx1<typeof Mutation$noArgsScalarArrNM>;
    export type noArgsScalarArrNN = _gqx1<typeof Mutation$noArgsScalarArrNN>;
    export type noArgsScalarMand = _gqx1<typeof Mutation$noArgsScalarMand>;
    export type noArgsScalarNull = _gqx1<typeof Mutation$noArgsScalarNull>;
  }

  export type $<T> =
    T extends typeof Query$argsObjectArr2D ? Query.argsObjectArr2D : $$1<T>;
  type $$1<T> =
    T extends typeof Query$argsObjectArrMM ? Query.argsObjectArrMM : $$2<T>;
  type $$2<T> =
    T extends typeof Query$argsObjectArrMN ? Query.argsObjectArrMN : $$3<T>;
  type $$3<T> =
    T extends typeof Query$argsObjectArrNM ? Query.argsObjectArrNM : $$4<T>;
  type $$4<T> =
    T extends typeof Query$argsObjectArrNN ? Query.argsObjectArrNN : $$5<T>;
  type $$5<T> =
    T extends typeof Query$argsObjectMand ? Query.argsObjectMand : $$6<T>;
  type $$6<T> =
    T extends typeof Query$argsObjectNull ? Query.argsObjectNull : $$7<T>;
  type $$7<T> =
    T extends typeof Query$argsScalarArr2D ? Query.argsScalarArr2D : $$8<T>;
  type $$8<T> =
    T extends typeof Query$argsScalarArrMM ? Query.argsScalarArrMM : $$9<T>;
  type $$9<T> =
    T extends typeof Query$argsScalarArrMN ? Query.argsScalarArrMN : $$10<T>;
  type $$10<T> =
    T extends typeof Query$argsScalarArrNM ? Query.argsScalarArrNM : $$11<T>;
  type $$11<T> =
    T extends typeof Query$argsScalarArrNN ? Query.argsScalarArrNN : $$12<T>;
  type $$12<T> =
    T extends typeof Query$argsScalarMand ? Query.argsScalarMand : $$13<T>;
  type $$13<T> =
    T extends typeof Query$argsScalarNull ? Query.argsScalarNull : $$14<T>;
  type $$14<T> =
    T extends typeof Query$noArgsObjectArr2D ? Query.noArgsObjectArr2D : $$15<T>;
  type $$15<T> =
    T extends typeof Query$noArgsObjectArrMM ? Query.noArgsObjectArrMM : $$16<T>;
  type $$16<T> =
    T extends typeof Query$noArgsObjectArrMN ? Query.noArgsObjectArrMN : $$17<T>;
  type $$17<T> =
    T extends typeof Query$noArgsObjectArrNM ? Query.noArgsObjectArrNM : $$18<T>;
  type $$18<T> =
    T extends typeof Query$noArgsObjectArrNN ? Query.noArgsObjectArrNN : $$19<T>;
  type $$19<T> =
    T extends typeof Query$noArgsObjectMand ? Query.noArgsObjectMand : $$20<T>;
  type $$20<T> =
    T extends typeof Query$noArgsObjectNull ? Query.noArgsObjectNull : $$21<T>;
  type $$21<T> =
    T extends typeof Query$noArgsScalarArr2D ? Query.noArgsScalarArr2D : $$22<T>;
  type $$22<T> =
    T extends typeof Query$noArgsScalarArrMM ? Query.noArgsScalarArrMM : $$23<T>;
  type $$23<T> =
    T extends typeof Query$noArgsScalarArrMN ? Query.noArgsScalarArrMN : $$24<T>;
  type $$24<T> =
    T extends typeof Query$noArgsScalarArrNM ? Query.noArgsScalarArrNM : $$25<T>;
  type $$25<T> =
    T extends typeof Query$noArgsScalarArrNN ? Query.noArgsScalarArrNN : $$26<T>;
  type $$26<T> =
    T extends typeof Query$noArgsScalarMand ? Query.noArgsScalarMand : $$27<T>;
  type $$27<T> =
    T extends typeof Query$noArgsScalarNull ? Query.noArgsScalarNull : $$28<T>;
  type $$28<T> =
    T extends typeof Mutation$argsObjectArr2D ? Mutation.argsObjectArr2D : $$29<T>;
  type $$29<T> =
    T extends typeof Mutation$argsObjectArrMM ? Mutation.argsObjectArrMM : $$30<T>;
  type $$30<T> =
    T extends typeof Mutation$argsObjectArrMN ? Mutation.argsObjectArrMN : $$31<T>;
  type $$31<T> =
    T extends typeof Mutation$argsObjectArrNM ? Mutation.argsObjectArrNM : $$32<T>;
  type $$32<T> =
    T extends typeof Mutation$argsObjectArrNN ? Mutation.argsObjectArrNN : $$33<T>;
  type $$33<T> =
    T extends typeof Mutation$argsObjectMand ? Mutation.argsObjectMand : $$34<T>;
  type $$34<T> =
    T extends typeof Mutation$argsObjectNull ? Mutation.argsObjectNull : $$35<T>;
  type $$35<T> =
    T extends typeof Mutation$argsScalarArr2D ? Mutation.argsScalarArr2D : $$36<T>;
  type $$36<T> =
    T extends typeof Mutation$argsScalarArrMM ? Mutation.argsScalarArrMM : $$37<T>;
  type $$37<T> =
    T extends typeof Mutation$argsScalarArrMN ? Mutation.argsScalarArrMN : $$38<T>;
  type $$38<T> =
    T extends typeof Mutation$argsScalarArrNM ? Mutation.argsScalarArrNM : $$39<T>;
  type $$39<T> =
    T extends typeof Mutation$argsScalarArrNN ? Mutation.argsScalarArrNN : $$40<T>;
  type $$40<T> =
    T extends typeof Mutation$argsScalarMand ? Mutation.argsScalarMand : $$41<T>;
  type $$41<T> =
    T extends typeof Mutation$argsScalarNull ? Mutation.argsScalarNull : $$42<T>;
  type $$42<T> =
    T extends typeof Mutation$noArgsObjectArr2D ? Mutation.noArgsObjectArr2D : $$43<T>;
  type $$43<T> =
    T extends typeof Mutation$noArgsObjectArrMM ? Mutation.noArgsObjectArrMM : $$44<T>;
  type $$44<T> =
    T extends typeof Mutation$noArgsObjectArrMN ? Mutation.noArgsObjectArrMN : $$45<T>;
  type $$45<T> =
    T extends typeof Mutation$noArgsObjectArrNM ? Mutation.noArgsObjectArrNM : $$46<T>;
  type $$46<T> =
    T extends typeof Mutation$noArgsObjectArrNN ? Mutation.noArgsObjectArrNN : $$47<T>;
  type $$47<T> =
    T extends typeof Mutation$noArgsObjectMand ? Mutation.noArgsObjectMand : $$48<T>;
  type $$48<T> =
    T extends typeof Mutation$noArgsObjectNull ? Mutation.noArgsObjectNull : $$49<T>;
  type $$49<T> =
    T extends typeof Mutation$noArgsScalarArr2D ? Mutation.noArgsScalarArr2D : $$50<T>;
  type $$50<T> =
    T extends typeof Mutation$noArgsScalarArrMM ? Mutation.noArgsScalarArrMM : $$51<T>;
  type $$51<T> =
    T extends typeof Mutation$noArgsScalarArrMN ? Mutation.noArgsScalarArrMN : $$52<T>;
  type $$52<T> =
    T extends typeof Mutation$noArgsScalarArrNM ? Mutation.noArgsScalarArrNM : $$53<T>;
  type $$53<T> =
    T extends typeof Mutation$noArgsScalarArrNN ? Mutation.noArgsScalarArrNN : $$54<T>;
  type $$54<T> =
    T extends typeof Mutation$noArgsScalarMand ? Mutation.noArgsScalarMand : $$55<T>;
  type $$55<T> =
    T extends typeof Mutation$noArgsScalarNull ? Mutation.noArgsScalarNull : never;
}

export namespace gqx2 {
  export namespace Query {
    export type argsObjectArr2D = _gqx2<typeof Query$argsObjectArr2D>;
    export type argsObjectArrMM = _gqx2<typeof Query$argsObjectArrMM>;
    export type argsObjectArrMN = _gqx2<typeof Query$argsObjectArrMN>;
    export type argsObjectArrNM = _gqx2<typeof Query$argsObjectArrNM>;
    export type argsObjectArrNN = _gqx2<typeof Query$argsObjectArrNN>;
    export type argsObjectMand = _gqx2<typeof Query$argsObjectMand>;
    export type argsObjectNull = _gqx2<typeof Query$argsObjectNull>;
    export type argsScalarArr2D = _gqx2<typeof Query$argsScalarArr2D>;
    export type argsScalarArrMM = _gqx2<typeof Query$argsScalarArrMM>;
    export type argsScalarArrMN = _gqx2<typeof Query$argsScalarArrMN>;
    export type argsScalarArrNM = _gqx2<typeof Query$argsScalarArrNM>;
    export type argsScalarArrNN = _gqx2<typeof Query$argsScalarArrNN>;
    export type argsScalarMand = _gqx2<typeof Query$argsScalarMand>;
    export type argsScalarNull = _gqx2<typeof Query$argsScalarNull>;
    export type noArgsObjectArr2D = _gqx2<typeof Query$noArgsObjectArr2D>;
    export type noArgsObjectArrMM = _gqx2<typeof Query$noArgsObjectArrMM>;
    export type noArgsObjectArrMN = _gqx2<typeof Query$noArgsObjectArrMN>;
    export type noArgsObjectArrNM = _gqx2<typeof Query$noArgsObjectArrNM>;
    export type noArgsObjectArrNN = _gqx2<typeof Query$noArgsObjectArrNN>;
    export type noArgsObjectMand = _gqx2<typeof Query$noArgsObjectMand>;
    export type noArgsObjectNull = _gqx2<typeof Query$noArgsObjectNull>;
    export type noArgsScalarArr2D = _gqx2<typeof Query$noArgsScalarArr2D>;
    export type noArgsScalarArrMM = _gqx2<typeof Query$noArgsScalarArrMM>;
    export type noArgsScalarArrMN = _gqx2<typeof Query$noArgsScalarArrMN>;
    export type noArgsScalarArrNM = _gqx2<typeof Query$noArgsScalarArrNM>;
    export type noArgsScalarArrNN = _gqx2<typeof Query$noArgsScalarArrNN>;
    export type noArgsScalarMand = _gqx2<typeof Query$noArgsScalarMand>;
    export type noArgsScalarNull = _gqx2<typeof Query$noArgsScalarNull>;
  }
  export namespace Mutation {
    export type argsObjectArr2D = _gqx2<typeof Mutation$argsObjectArr2D>;
    export type argsObjectArrMM = _gqx2<typeof Mutation$argsObjectArrMM>;
    export type argsObjectArrMN = _gqx2<typeof Mutation$argsObjectArrMN>;
    export type argsObjectArrNM = _gqx2<typeof Mutation$argsObjectArrNM>;
    export type argsObjectArrNN = _gqx2<typeof Mutation$argsObjectArrNN>;
    export type argsObjectMand = _gqx2<typeof Mutation$argsObjectMand>;
    export type argsObjectNull = _gqx2<typeof Mutation$argsObjectNull>;
    export type argsScalarArr2D = _gqx2<typeof Mutation$argsScalarArr2D>;
    export type argsScalarArrMM = _gqx2<typeof Mutation$argsScalarArrMM>;
    export type argsScalarArrMN = _gqx2<typeof Mutation$argsScalarArrMN>;
    export type argsScalarArrNM = _gqx2<typeof Mutation$argsScalarArrNM>;
    export type argsScalarArrNN = _gqx2<typeof Mutation$argsScalarArrNN>;
    export type argsScalarMand = _gqx2<typeof Mutation$argsScalarMand>;
    export type argsScalarNull = _gqx2<typeof Mutation$argsScalarNull>;
    export type noArgsObjectArr2D = _gqx2<typeof Mutation$noArgsObjectArr2D>;
    export type noArgsObjectArrMM = _gqx2<typeof Mutation$noArgsObjectArrMM>;
    export type noArgsObjectArrMN = _gqx2<typeof Mutation$noArgsObjectArrMN>;
    export type noArgsObjectArrNM = _gqx2<typeof Mutation$noArgsObjectArrNM>;
    export type noArgsObjectArrNN = _gqx2<typeof Mutation$noArgsObjectArrNN>;
    export type noArgsObjectMand = _gqx2<typeof Mutation$noArgsObjectMand>;
    export type noArgsObjectNull = _gqx2<typeof Mutation$noArgsObjectNull>;
    export type noArgsScalarArr2D = _gqx2<typeof Mutation$noArgsScalarArr2D>;
    export type noArgsScalarArrMM = _gqx2<typeof Mutation$noArgsScalarArrMM>;
    export type noArgsScalarArrMN = _gqx2<typeof Mutation$noArgsScalarArrMN>;
    export type noArgsScalarArrNM = _gqx2<typeof Mutation$noArgsScalarArrNM>;
    export type noArgsScalarArrNN = _gqx2<typeof Mutation$noArgsScalarArrNN>;
    export type noArgsScalarMand = _gqx2<typeof Mutation$noArgsScalarMand>;
    export type noArgsScalarNull = _gqx2<typeof Mutation$noArgsScalarNull>;
  }

  export type $<T> =
    T extends typeof Query$argsObjectArr2D ? Query.argsObjectArr2D : $$1<T>;
  type $$1<T> =
    T extends typeof Query$argsObjectArrMM ? Query.argsObjectArrMM : $$2<T>;
  type $$2<T> =
    T extends typeof Query$argsObjectArrMN ? Query.argsObjectArrMN : $$3<T>;
  type $$3<T> =
    T extends typeof Query$argsObjectArrNM ? Query.argsObjectArrNM : $$4<T>;
  type $$4<T> =
    T extends typeof Query$argsObjectArrNN ? Query.argsObjectArrNN : $$5<T>;
  type $$5<T> =
    T extends typeof Query$argsObjectMand ? Query.argsObjectMand : $$6<T>;
  type $$6<T> =
    T extends typeof Query$argsObjectNull ? Query.argsObjectNull : $$7<T>;
  type $$7<T> =
    T extends typeof Query$argsScalarArr2D ? Query.argsScalarArr2D : $$8<T>;
  type $$8<T> =
    T extends typeof Query$argsScalarArrMM ? Query.argsScalarArrMM : $$9<T>;
  type $$9<T> =
    T extends typeof Query$argsScalarArrMN ? Query.argsScalarArrMN : $$10<T>;
  type $$10<T> =
    T extends typeof Query$argsScalarArrNM ? Query.argsScalarArrNM : $$11<T>;
  type $$11<T> =
    T extends typeof Query$argsScalarArrNN ? Query.argsScalarArrNN : $$12<T>;
  type $$12<T> =
    T extends typeof Query$argsScalarMand ? Query.argsScalarMand : $$13<T>;
  type $$13<T> =
    T extends typeof Query$argsScalarNull ? Query.argsScalarNull : $$14<T>;
  type $$14<T> =
    T extends typeof Query$noArgsObjectArr2D ? Query.noArgsObjectArr2D : $$15<T>;
  type $$15<T> =
    T extends typeof Query$noArgsObjectArrMM ? Query.noArgsObjectArrMM : $$16<T>;
  type $$16<T> =
    T extends typeof Query$noArgsObjectArrMN ? Query.noArgsObjectArrMN : $$17<T>;
  type $$17<T> =
    T extends typeof Query$noArgsObjectArrNM ? Query.noArgsObjectArrNM : $$18<T>;
  type $$18<T> =
    T extends typeof Query$noArgsObjectArrNN ? Query.noArgsObjectArrNN : $$19<T>;
  type $$19<T> =
    T extends typeof Query$noArgsObjectMand ? Query.noArgsObjectMand : $$20<T>;
  type $$20<T> =
    T extends typeof Query$noArgsObjectNull ? Query.noArgsObjectNull : $$21<T>;
  type $$21<T> =
    T extends typeof Query$noArgsScalarArr2D ? Query.noArgsScalarArr2D : $$22<T>;
  type $$22<T> =
    T extends typeof Query$noArgsScalarArrMM ? Query.noArgsScalarArrMM : $$23<T>;
  type $$23<T> =
    T extends typeof Query$noArgsScalarArrMN ? Query.noArgsScalarArrMN : $$24<T>;
  type $$24<T> =
    T extends typeof Query$noArgsScalarArrNM ? Query.noArgsScalarArrNM : $$25<T>;
  type $$25<T> =
    T extends typeof Query$noArgsScalarArrNN ? Query.noArgsScalarArrNN : $$26<T>;
  type $$26<T> =
    T extends typeof Query$noArgsScalarMand ? Query.noArgsScalarMand : $$27<T>;
  type $$27<T> =
    T extends typeof Query$noArgsScalarNull ? Query.noArgsScalarNull : $$28<T>;
  type $$28<T> =
    T extends typeof Mutation$argsObjectArr2D ? Mutation.argsObjectArr2D : $$29<T>;
  type $$29<T> =
    T extends typeof Mutation$argsObjectArrMM ? Mutation.argsObjectArrMM : $$30<T>;
  type $$30<T> =
    T extends typeof Mutation$argsObjectArrMN ? Mutation.argsObjectArrMN : $$31<T>;
  type $$31<T> =
    T extends typeof Mutation$argsObjectArrNM ? Mutation.argsObjectArrNM : $$32<T>;
  type $$32<T> =
    T extends typeof Mutation$argsObjectArrNN ? Mutation.argsObjectArrNN : $$33<T>;
  type $$33<T> =
    T extends typeof Mutation$argsObjectMand ? Mutation.argsObjectMand : $$34<T>;
  type $$34<T> =
    T extends typeof Mutation$argsObjectNull ? Mutation.argsObjectNull : $$35<T>;
  type $$35<T> =
    T extends typeof Mutation$argsScalarArr2D ? Mutation.argsScalarArr2D : $$36<T>;
  type $$36<T> =
    T extends typeof Mutation$argsScalarArrMM ? Mutation.argsScalarArrMM : $$37<T>;
  type $$37<T> =
    T extends typeof Mutation$argsScalarArrMN ? Mutation.argsScalarArrMN : $$38<T>;
  type $$38<T> =
    T extends typeof Mutation$argsScalarArrNM ? Mutation.argsScalarArrNM : $$39<T>;
  type $$39<T> =
    T extends typeof Mutation$argsScalarArrNN ? Mutation.argsScalarArrNN : $$40<T>;
  type $$40<T> =
    T extends typeof Mutation$argsScalarMand ? Mutation.argsScalarMand : $$41<T>;
  type $$41<T> =
    T extends typeof Mutation$argsScalarNull ? Mutation.argsScalarNull : $$42<T>;
  type $$42<T> =
    T extends typeof Mutation$noArgsObjectArr2D ? Mutation.noArgsObjectArr2D : $$43<T>;
  type $$43<T> =
    T extends typeof Mutation$noArgsObjectArrMM ? Mutation.noArgsObjectArrMM : $$44<T>;
  type $$44<T> =
    T extends typeof Mutation$noArgsObjectArrMN ? Mutation.noArgsObjectArrMN : $$45<T>;
  type $$45<T> =
    T extends typeof Mutation$noArgsObjectArrNM ? Mutation.noArgsObjectArrNM : $$46<T>;
  type $$46<T> =
    T extends typeof Mutation$noArgsObjectArrNN ? Mutation.noArgsObjectArrNN : $$47<T>;
  type $$47<T> =
    T extends typeof Mutation$noArgsObjectMand ? Mutation.noArgsObjectMand : $$48<T>;
  type $$48<T> =
    T extends typeof Mutation$noArgsObjectNull ? Mutation.noArgsObjectNull : $$49<T>;
  type $$49<T> =
    T extends typeof Mutation$noArgsScalarArr2D ? Mutation.noArgsScalarArr2D : $$50<T>;
  type $$50<T> =
    T extends typeof Mutation$noArgsScalarArrMM ? Mutation.noArgsScalarArrMM : $$51<T>;
  type $$51<T> =
    T extends typeof Mutation$noArgsScalarArrMN ? Mutation.noArgsScalarArrMN : $$52<T>;
  type $$52<T> =
    T extends typeof Mutation$noArgsScalarArrNM ? Mutation.noArgsScalarArrNM : $$53<T>;
  type $$53<T> =
    T extends typeof Mutation$noArgsScalarArrNN ? Mutation.noArgsScalarArrNN : $$54<T>;
  type $$54<T> =
    T extends typeof Mutation$noArgsScalarMand ? Mutation.noArgsScalarMand : $$55<T>;
  type $$55<T> =
    T extends typeof Mutation$noArgsScalarNull ? Mutation.noArgsScalarNull : never;
}"
`;

exports[`undefined 1`] = `""`;

exports[`unexported 1`] = `
"namespace gqx {
  export namespace Query {
    export type argsObjectArr2D = _gqx<typeof Query$argsObjectArr2D>;
    export type argsObjectArrMM = _gqx<typeof Query$argsObjectArrMM>;
    export type argsObjectArrMN = _gqx<typeof Query$argsObjectArrMN>;
    export type argsObjectArrNM = _gqx<typeof Query$argsObjectArrNM>;
    export type argsObjectArrNN = _gqx<typeof Query$argsObjectArrNN>;
    export type argsObjectMand = _gqx<typeof Query$argsObjectMand>;
    export type argsObjectNull = _gqx<typeof Query$argsObjectNull>;
    export type argsScalarArr2D = _gqx<typeof Query$argsScalarArr2D>;
    export type argsScalarArrMM = _gqx<typeof Query$argsScalarArrMM>;
    export type argsScalarArrMN = _gqx<typeof Query$argsScalarArrMN>;
    export type argsScalarArrNM = _gqx<typeof Query$argsScalarArrNM>;
    export type argsScalarArrNN = _gqx<typeof Query$argsScalarArrNN>;
    export type argsScalarMand = _gqx<typeof Query$argsScalarMand>;
    export type argsScalarNull = _gqx<typeof Query$argsScalarNull>;
    export type noArgsObjectArr2D = _gqx<typeof Query$noArgsObjectArr2D>;
    export type noArgsObjectArrMM = _gqx<typeof Query$noArgsObjectArrMM>;
    export type noArgsObjectArrMN = _gqx<typeof Query$noArgsObjectArrMN>;
    export type noArgsObjectArrNM = _gqx<typeof Query$noArgsObjectArrNM>;
    export type noArgsObjectArrNN = _gqx<typeof Query$noArgsObjectArrNN>;
    export type noArgsObjectMand = _gqx<typeof Query$noArgsObjectMand>;
    export type noArgsObjectNull = _gqx<typeof Query$noArgsObjectNull>;
    export type noArgsScalarArr2D = _gqx<typeof Query$noArgsScalarArr2D>;
    export type noArgsScalarArrMM = _gqx<typeof Query$noArgsScalarArrMM>;
    export type noArgsScalarArrMN = _gqx<typeof Query$noArgsScalarArrMN>;
    export type noArgsScalarArrNM = _gqx<typeof Query$noArgsScalarArrNM>;
    export type noArgsScalarArrNN = _gqx<typeof Query$noArgsScalarArrNN>;
    export type noArgsScalarMand = _gqx<typeof Query$noArgsScalarMand>;
    export type noArgsScalarNull = _gqx<typeof Query$noArgsScalarNull>;
  }
  export namespace Mutation {
    export type argsObjectArr2D = _gqx<typeof Mutation$argsObjectArr2D>;
    export type argsObjectArrMM = _gqx<typeof Mutation$argsObjectArrMM>;
    export type argsObjectArrMN = _gqx<typeof Mutation$argsObjectArrMN>;
    export type argsObjectArrNM = _gqx<typeof Mutation$argsObjectArrNM>;
    export type argsObjectArrNN = _gqx<typeof Mutation$argsObjectArrNN>;
    export type argsObjectMand = _gqx<typeof Mutation$argsObjectMand>;
    export type argsObjectNull = _gqx<typeof Mutation$argsObjectNull>;
    export type argsScalarArr2D = _gqx<typeof Mutation$argsScalarArr2D>;
    export type argsScalarArrMM = _gqx<typeof Mutation$argsScalarArrMM>;
    export type argsScalarArrMN = _gqx<typeof Mutation$argsScalarArrMN>;
    export type argsScalarArrNM = _gqx<typeof Mutation$argsScalarArrNM>;
    export type argsScalarArrNN = _gqx<typeof Mutation$argsScalarArrNN>;
    export type argsScalarMand = _gqx<typeof Mutation$argsScalarMand>;
    export type argsScalarNull = _gqx<typeof Mutation$argsScalarNull>;
    export type noArgsObjectArr2D = _gqx<typeof Mutation$noArgsObjectArr2D>;
    export type noArgsObjectArrMM = _gqx<typeof Mutation$noArgsObjectArrMM>;
    export type noArgsObjectArrMN = _gqx<typeof Mutation$noArgsObjectArrMN>;
    export type noArgsObjectArrNM = _gqx<typeof Mutation$noArgsObjectArrNM>;
    export type noArgsObjectArrNN = _gqx<typeof Mutation$noArgsObjectArrNN>;
    export type noArgsObjectMand = _gqx<typeof Mutation$noArgsObjectMand>;
    export type noArgsObjectNull = _gqx<typeof Mutation$noArgsObjectNull>;
    export type noArgsScalarArr2D = _gqx<typeof Mutation$noArgsScalarArr2D>;
    export type noArgsScalarArrMM = _gqx<typeof Mutation$noArgsScalarArrMM>;
    export type noArgsScalarArrMN = _gqx<typeof Mutation$noArgsScalarArrMN>;
    export type noArgsScalarArrNM = _gqx<typeof Mutation$noArgsScalarArrNM>;
    export type noArgsScalarArrNN = _gqx<typeof Mutation$noArgsScalarArrNN>;
    export type noArgsScalarMand = _gqx<typeof Mutation$noArgsScalarMand>;
    export type noArgsScalarNull = _gqx<typeof Mutation$noArgsScalarNull>;
  }

  export type $<T> =
    T extends typeof Query$argsObjectArr2D ? Query.argsObjectArr2D : $$1<T>;
  type $$1<T> =
    T extends typeof Query$argsObjectArrMM ? Query.argsObjectArrMM : $$2<T>;
  type $$2<T> =
    T extends typeof Query$argsObjectArrMN ? Query.argsObjectArrMN : $$3<T>;
  type $$3<T> =
    T extends typeof Query$argsObjectArrNM ? Query.argsObjectArrNM : $$4<T>;
  type $$4<T> =
    T extends typeof Query$argsObjectArrNN ? Query.argsObjectArrNN : $$5<T>;
  type $$5<T> =
    T extends typeof Query$argsObjectMand ? Query.argsObjectMand : $$6<T>;
  type $$6<T> =
    T extends typeof Query$argsObjectNull ? Query.argsObjectNull : $$7<T>;
  type $$7<T> =
    T extends typeof Query$argsScalarArr2D ? Query.argsScalarArr2D : $$8<T>;
  type $$8<T> =
    T extends typeof Query$argsScalarArrMM ? Query.argsScalarArrMM : $$9<T>;
  type $$9<T> =
    T extends typeof Query$argsScalarArrMN ? Query.argsScalarArrMN : $$10<T>;
  type $$10<T> =
    T extends typeof Query$argsScalarArrNM ? Query.argsScalarArrNM : $$11<T>;
  type $$11<T> =
    T extends typeof Query$argsScalarArrNN ? Query.argsScalarArrNN : $$12<T>;
  type $$12<T> =
    T extends typeof Query$argsScalarMand ? Query.argsScalarMand : $$13<T>;
  type $$13<T> =
    T extends typeof Query$argsScalarNull ? Query.argsScalarNull : $$14<T>;
  type $$14<T> =
    T extends typeof Query$noArgsObjectArr2D ? Query.noArgsObjectArr2D : $$15<T>;
  type $$15<T> =
    T extends typeof Query$noArgsObjectArrMM ? Query.noArgsObjectArrMM : $$16<T>;
  type $$16<T> =
    T extends typeof Query$noArgsObjectArrMN ? Query.noArgsObjectArrMN : $$17<T>;
  type $$17<T> =
    T extends typeof Query$noArgsObjectArrNM ? Query.noArgsObjectArrNM : $$18<T>;
  type $$18<T> =
    T extends typeof Query$noArgsObjectArrNN ? Query.noArgsObjectArrNN : $$19<T>;
  type $$19<T> =
    T extends typeof Query$noArgsObjectMand ? Query.noArgsObjectMand : $$20<T>;
  type $$20<T> =
    T extends typeof Query$noArgsObjectNull ? Query.noArgsObjectNull : $$21<T>;
  type $$21<T> =
    T extends typeof Query$noArgsScalarArr2D ? Query.noArgsScalarArr2D : $$22<T>;
  type $$22<T> =
    T extends typeof Query$noArgsScalarArrMM ? Query.noArgsScalarArrMM : $$23<T>;
  type $$23<T> =
    T extends typeof Query$noArgsScalarArrMN ? Query.noArgsScalarArrMN : $$24<T>;
  type $$24<T> =
    T extends typeof Query$noArgsScalarArrNM ? Query.noArgsScalarArrNM : $$25<T>;
  type $$25<T> =
    T extends typeof Query$noArgsScalarArrNN ? Query.noArgsScalarArrNN : $$26<T>;
  type $$26<T> =
    T extends typeof Query$noArgsScalarMand ? Query.noArgsScalarMand : $$27<T>;
  type $$27<T> =
    T extends typeof Query$noArgsScalarNull ? Query.noArgsScalarNull : $$28<T>;
  type $$28<T> =
    T extends typeof Mutation$argsObjectArr2D ? Mutation.argsObjectArr2D : $$29<T>;
  type $$29<T> =
    T extends typeof Mutation$argsObjectArrMM ? Mutation.argsObjectArrMM : $$30<T>;
  type $$30<T> =
    T extends typeof Mutation$argsObjectArrMN ? Mutation.argsObjectArrMN : $$31<T>;
  type $$31<T> =
    T extends typeof Mutation$argsObjectArrNM ? Mutation.argsObjectArrNM : $$32<T>;
  type $$32<T> =
    T extends typeof Mutation$argsObjectArrNN ? Mutation.argsObjectArrNN : $$33<T>;
  type $$33<T> =
    T extends typeof Mutation$argsObjectMand ? Mutation.argsObjectMand : $$34<T>;
  type $$34<T> =
    T extends typeof Mutation$argsObjectNull ? Mutation.argsObjectNull : $$35<T>;
  type $$35<T> =
    T extends typeof Mutation$argsScalarArr2D ? Mutation.argsScalarArr2D : $$36<T>;
  type $$36<T> =
    T extends typeof Mutation$argsScalarArrMM ? Mutation.argsScalarArrMM : $$37<T>;
  type $$37<T> =
    T extends typeof Mutation$argsScalarArrMN ? Mutation.argsScalarArrMN : $$38<T>;
  type $$38<T> =
    T extends typeof Mutation$argsScalarArrNM ? Mutation.argsScalarArrNM : $$39<T>;
  type $$39<T> =
    T extends typeof Mutation$argsScalarArrNN ? Mutation.argsScalarArrNN : $$40<T>;
  type $$40<T> =
    T extends typeof Mutation$argsScalarMand ? Mutation.argsScalarMand : $$41<T>;
  type $$41<T> =
    T extends typeof Mutation$argsScalarNull ? Mutation.argsScalarNull : $$42<T>;
  type $$42<T> =
    T extends typeof Mutation$noArgsObjectArr2D ? Mutation.noArgsObjectArr2D : $$43<T>;
  type $$43<T> =
    T extends typeof Mutation$noArgsObjectArrMM ? Mutation.noArgsObjectArrMM : $$44<T>;
  type $$44<T> =
    T extends typeof Mutation$noArgsObjectArrMN ? Mutation.noArgsObjectArrMN : $$45<T>;
  type $$45<T> =
    T extends typeof Mutation$noArgsObjectArrNM ? Mutation.noArgsObjectArrNM : $$46<T>;
  type $$46<T> =
    T extends typeof Mutation$noArgsObjectArrNN ? Mutation.noArgsObjectArrNN : $$47<T>;
  type $$47<T> =
    T extends typeof Mutation$noArgsObjectMand ? Mutation.noArgsObjectMand : $$48<T>;
  type $$48<T> =
    T extends typeof Mutation$noArgsObjectNull ? Mutation.noArgsObjectNull : $$49<T>;
  type $$49<T> =
    T extends typeof Mutation$noArgsScalarArr2D ? Mutation.noArgsScalarArr2D : $$50<T>;
  type $$50<T> =
    T extends typeof Mutation$noArgsScalarArrMM ? Mutation.noArgsScalarArrMM : $$51<T>;
  type $$51<T> =
    T extends typeof Mutation$noArgsScalarArrMN ? Mutation.noArgsScalarArrMN : $$52<T>;
  type $$52<T> =
    T extends typeof Mutation$noArgsScalarArrNM ? Mutation.noArgsScalarArrNM : $$53<T>;
  type $$53<T> =
    T extends typeof Mutation$noArgsScalarArrNN ? Mutation.noArgsScalarArrNN : $$54<T>;
  type $$54<T> =
    T extends typeof Mutation$noArgsScalarMand ? Mutation.noArgsScalarMand : $$55<T>;
  type $$55<T> =
    T extends typeof Mutation$noArgsScalarNull ? Mutation.noArgsScalarNull : never;
}"
`;
